--- a/lslidar_c16_decoder/package.xml
+++ b/lslidar_c16_decoder/package.xml
@@ -1,48 +1,37 @@
-<package>
-
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>lslidar_c16_decoder</name>
   <version>1.0.0</version>
   <description>
     Point cloud conversions for Leishen C16 LIDARs.
   </description>
-  <url>http://www.ros.org/wiki/lslidar_c16</url>
-  <maintainer email="yutong@lslidar.com">Yutong</maintainer>
+  <maintainer email="yutongyan@lslidar.com">Yutong</maintainer>
+  <maintainer email="lzs_1993@qq.com">ZhenshengLee</maintainer>
   <author>Yutong</author>
-  <license>GNC General Public License V3.0</license>
+  <license>GNU General Public License V3.0</license>
+  <url type="website">http://www.ros.org/wiki/lslidar_c16</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <build_depend>angles</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>lslidar_c16_driver</build_depend>
-  <build_depend>lslidar_c16_msgs</build_depend>
-  <build_depend>dynamic_reconfigure</build_depend>
-  <build_depend>yaml-cpp</build_depend>
+  <depend>diagnostic_msgs</depend>
+  <depend>diagnostic_updater</depend>
+  <depend>libpcap</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>tf2_ros</depend>
+  <depend>angles</depend>
+  <depend>pcl_conversions</depend>
+  <depend>sensor_msgs</depend>
+  <depend>lslidar_c16_driver</depend>
+  <depend>lslidar_c16_msgs</depend>
+  <depend>yaml-cpp</depend>
 
-  <!-- these build dependencies are only needed for unit testing -->
-  <build_depend>tf2_ros</build_depend>
-
-  <run_depend>angles</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>pcl_conversions</run_depend>
-  <!-- <run_depend>python-yaml</run_depend> -->
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>lslidar_c16_driver</run_depend>
-  <run_depend>lslidar_c16_msgs</run_depend>
-  <!-- <run_depend>yaml-cpp</run_depend> -->
-  <run_depend>dynamic_reconfigure</run_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <nodelet plugin="${prefix}/nodelets.xml"/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
