--- a/lslidar_c16_driver/package.xml
+++ b/lslidar_c16_driver/package.xml
@@ -1,57 +1,32 @@
 <?xml version="1.0"?>
-<package>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>lslidar_c16_driver</name>
-  <version>1.0.0</version>
-
-  <maintainer email="tongsky723@sina.com">tongsky</maintainer>
-  <author>Yutong</author>
-  <license>BSD</license>
+  <version>1.2.0</version>
   <description>
-    ROS device driver for Leishen C16 lidar.
+    ROS device driver for LslidarC16 3D LIDARs.
   </description>
+  <maintainer email="yutongyan@lslidar.com">Yutong</maintainer>
+  <maintainer email="lzs_1993@qq.com">ZhenshengLee</maintainer>
+  <author>Yutong</author>
+  <license>GNU General Public License V3.0</license>
+  <url type="website">http://www.ros.org/wiki/lslidar_c16</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <build_depend>angles</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>dynamic_reconfigure</build_depend>
-  <build_depend>roslaunch</build_depend>
-  <build_depend>rostest</build_depend>
-  <build_depend>tf2_ros</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>rslidar_input</build_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>libpcl-all-dev</build_depend>
-  <build_depend>lslidar_c16_msgs</build_depend>
+  <depend>diagnostic_msgs</depend>
+  <depend>diagnostic_updater</depend>
+  <depend>libpcap</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>tf2_ros</depend>
+  <depend>lslidar_c16__msgs</depend>
 
-
-  <run_depend>angles</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>dynamic_reconfigure</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>pcl_conversions</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>libpcl-all</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>lslidar_c16_msgs</run_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <nodelet plugin="${prefix}/nodelet_lslidar_c16.xml"/>
+    <build_type>ament_cmake</build_type>
   </export>
-
 </package>
