--- a/lslidar_c16_msgs/CMakeLists.txt
+++ b/lslidar_c16_msgs/CMakeLists.txt
@@ -1,24 +1,35 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
+
 project(lslidar_c16_msgs)
 
-find_package(catkin REQUIRED COMPONENTS
-  message_generation
-  std_msgs
-  sensor_msgs
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+find_package(ament_cmake REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/LslidarC16Layer.msg"
+  "msg/LslidarC16Packet.msg"
+  "msg/LslidarC16Point.msg"
+  "msg/LslidarC16Scan.msg"
+  "msg/LslidarC16Sweep.msg"
+  "msg/LslidarC16ScanUnified.msg"
+  DEPENDENCIES std_msgs sensor_msgs
+  DEPENDENCIES builtin_interfaces
+  ADD_LINTER_TESTS
 )
 
-add_message_files(
-  DIRECTORY msg
-  FILES
-  LslidarC16Layer.msg
-  LslidarC16Packet.msg
-  LslidarC16Point.msg
-  LslidarC16Scan.msg
-  LslidarC16Sweep.msg
-  LslidarC16ScanUnified.msg
-)
-generate_messages(DEPENDENCIES std_msgs sensor_msgs)
+ament_export_dependencies(rosidl_default_runtime)
 
-catkin_package(
-  CATKIN_DEPENDS message_runtime std_msgs sensor_msgs
-)
+ament_package()
+
