--- a/lslidar_c16_msgs/package.xml
+++ b/lslidar_c16_msgs/package.xml
@@ -1,22 +1,33 @@
-<package>
-
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>lslidar_c16_msgs</name>
   <version>1.2.0</version>
   <description>
     ROS message definitions for Leishen C16 LIDARs.
   </description>
-  <url>http://www.ros.org/wiki/lslidar_c16</url>
   <maintainer email="yutongyan@lslidar.com">Yutong</maintainer>
-  <author>Yutong</author>
+  <maintainer email="lzs_1993@qq.com">ZhenshengLee</maintainer>
   <license>GNU General Public License V3.0</license>
+  <url type="website">http://www.ros.org/wiki/lslidar_c16</url>
+  <author>Yutong</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>message_generation</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
+  <build_depend>rosidl_default_generators</build_depend>
 
+  <depend>builtin_interfaces</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
